scrollbar fixes

--- a/src/default/_add.scss
+++ b/src/default/_add.scss
@@ -10,24 +10,23 @@
                 -ms-overflow-style: auto;  /* IE 10 */
         
                 ::-webkit-scrollbar {
-                    width: auto;
+                    width: 1rem;
                 }
 
                 /* Track */
                 ::-webkit-scrollbar-track {
-                    -webkit-box-shadow: auto; 
-                    -webkit-border-radius: auto;
-                    border-radius: auto;
-                    background:auto;    
+                    box-shadow: 0;
+                    border-radius: 0;
+                    background: transparent;    
                 }
 
                 /* Handle */
                 ::-webkit-scrollbar-thumb {
-                    -webkit-border-radius:auto;
-                    border-radius:auto;
-                    background:auto; 
-                    -webkit-box-shadow:auto; 
+                    -webkit-border-radius: 1rem;
+                    border-radius: .5rem;
+                    background: #cccccc; 
                 }
+
                 ::-webkit-scrollbar-thumb:window-inactive {
                     background: auto; 
                 }
